Fix cloud spacing.

--- a/jujugui/static/gui/src/app/components/profile/credential-list/_credential-list.scss
+++ b/jujugui/static/gui/src/app/components/profile/credential-list/_credential-list.scss
@@ -12,4 +12,12 @@
   &__add {
     margin-right: 1rem;
   }
+
+  .deployment-cloud__list {
+    padding: 0 20px;
+  }
+
+  .deployment-cloud__cloud-logo svg {
+    max-width: 200px;
+  }
 }
